--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg static-top ">
     <div class="container">
       <a class="navbar-brand" style="background-color: #b27438;" href="#">
-            <img src="C:\Users\User\Documents\Main Registration Form Kannu_files\aileadlogo.png" alt="">
+            <img src="Aileadlogo.png" alt="">
           </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
