image issues solved

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="C:\Users\User\Documents\Main Registration Form Kannu_files\Aileadlogo.png" rel="icon">
-  <link href="C:\Users\User\Documents\Main Registration Form Kannu_files\Aileadlogo.png" rel="C:\Users\User\Documents\Main Registration Form Kannu_files\Aileadlogo.png">
+  <link href="https://scontent.fabv2-1.fna.fbcdn.net/v/t1.0-9/97136618_2804678399631032_937402519594729472_n.jpg?_nc_cat=109&_nc_sid=730e14&_nc_eui2=AeEneOJCKrRC1FiiN9M3ghoUuAN_oWIMYxG4A3-hYgxjETISzWieC480P7QJRSbD9vhOA8B8lU0B_3Ol8cea33OH&_nc_oc=AQn24NRgLs8YYFGtKlCTZm2QG4xBJNFyr6wCFm7qdQuTPC3KAsaffSieXvDiFirzVkU&_nc_ht=scontent.fabv2-1.fna&oh=d251d298103fa5f50579baeaf33e17ef&oe=5EE5E25C" rel="icon">
+  <link href="https://scontent.fabv2-1.fna.fbcdn.net/v/t1.0-9/97136618_2804678399631032_937402519594729472_n.jpg?_nc_cat=109&_nc_sid=730e14&_nc_eui2=AeEneOJCKrRC1FiiN9M3ghoUuAN_oWIMYxG4A3-hYgxjETISzWieC480P7QJRSbD9vhOA8B8lU0B_3Ol8cea33OH&_nc_oc=AQn24NRgLs8YYFGtKlCTZm2QG4xBJNFyr6wCFm7qdQuTPC3KAsaffSieXvDiFirzVkU&_nc_ht=scontent.fabv2-1.fna&oh=d251d298103fa5f50579baeaf33e17ef&oe=5EE5E25C" rel="https://scontent.fabv2-1.fna.fbcdn.net/v/t1.0-9/97136618_2804678399631032_937402519594729472_n.jpg?_nc_cat=109&_nc_sid=730e14&_nc_eui2=AeEneOJCKrRC1FiiN9M3ghoUuAN_oWIMYxG4A3-hYgxjETISzWieC480P7QJRSbD9vhOA8B8lU0B_3Ol8cea33OH&_nc_oc=AQn24NRgLs8YYFGtKlCTZm2QG4xBJNFyr6wCFm7qdQuTPC3KAsaffSieXvDiFirzVkU&_nc_ht=scontent.fabv2-1.fna&oh=d251d298103fa5f50579baeaf33e17ef&oe=5EE5E25C">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -54,7 +54,7 @@
   <header id="header" class="fixed-top ">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html" class"logo"><img src="C:\Users\User\Documents\Main Registration Form Kannu_files\Aileadlogo.png" alt="" class="img-fluid"></a></h1>
+      <h1 class="logo"><a href="index.html" class"logo"><img src="Aileadlogo.png" alt="" class="img-fluid"></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -436,7 +436,7 @@ Computer vision (CV) is concerned with how the computer visually perceive the wo
         <div class="owl-carousel testimonials-carousel">
 
           <div class="testimonial-item">
-            <img src="C:\Users\User\Desktop\Folders on Desktop\IMG-20191226-WA0027.jpg" class="testimonial-img" alt="">
+            <img src="https://scontent.fabv2-1.fna.fbcdn.net/v/t1.0-9/96758193_2804665119632360_287484662454943744_n.jpg?_nc_cat=100&_nc_sid=730e14&_nc_eui2=AeHF29XR2FKy7urQ5lLexTO-WAHb08YpQdJYAdvTxilB0ra6IAwZWSrtbqTsH7R6gbqlJLTRAMHIZ0wxiXGvc4mm&_nc_oc=AQl7A5o3Uh5IptXqHof0KS_TnNZf6ZNK_PxFsu_ovllNqSCnvmwQwuPfIw-8y1YS-Ow&_nc_ht=scontent.fabv2-1.fna&oh=68ecf14b78c18765ae48abfa92b2c6bf&oe=5EE3C096" class="testimonial-img" alt="">
             <h3>Ogunbiyi Oluwaseyi</h3>
             <h4>Trainee (Mech Engr.)</h4>
             <p>
@@ -447,7 +447,7 @@ Computer vision (CV) is concerned with how the computer visually perceive the wo
           </div>
 
           <div class="testimonial-item">
-            <img src="C:\Users\User\Desktop\Folders on Desktop\opeyemi.png" class="testimonial-img" alt="">
+            <img src="https://scontent.fabv2-1.fna.fbcdn.net/v/t1.0-9/97103181_2804665199632352_8096421881659260928_n.jpg?_nc_cat=103&_nc_sid=730e14&_nc_eui2=AeF6tf1HJrn_TbJuKt1kPyspnINqZGq2ZzGcg2pkarZnMQyvygk-bB5G8cGqvU9Ev09_enx5wOn6efpjEVmPLOhg&_nc_oc=AQl_HmOO0uJarbzpGHNmuMmaDSvmD4ykQPORusOVTxnnsSk8AHvRjnEEqzptUuhp4G4&_nc_ht=scontent.fabv2-1.fna&oh=b0b09839898986eb53731799266b2d8e&oe=5EE3476C" class="testimonial-img" alt="">
             <h3>Bakare Opeyemi</h3>
             <h4>Trainee (Mech Engr.)</h4>
             <p>
@@ -459,7 +459,7 @@ Computer vision (CV) is concerned with how the computer visually perceive the wo
           </div>
 
           <div class="testimonial-item">
-            <img src="C:\Users\User\Desktop\Folders on Desktop\ike.png" class="testimonial-img" alt="">
+            <img src="https://scontent.fabv2-1.fna.fbcdn.net/v/t1.0-9/97099583_2804665172965688_9135381660336914432_n.jpg?_nc_cat=101&_nc_sid=730e14&_nc_eui2=AeE6QfIbZuDD_51hfkvz2NAX_0RqMOEVlTf_RGow4RWVN4LZtcf-DpqfLwn4ind6bgaZhhCDeCaVa0HIud0FkK8k&_nc_oc=AQlOY-ms4Mo-O57DifCpg0RJtUQLvHVqVS70Y4_fLWNwtbTlxJ19dCMwXnm8L-K-FI4&_nc_ht=scontent.fabv2-1.fna&oh=3174f4ff1f90ad837e8023c087421ad3&oe=5EE67A04" class="testimonial-img" alt="">
             <h3>Oloruntoba Ikeoluwa</h3>
             <h4>Trainee (AeroSpace Engr.)</h4>
             <p>
@@ -471,7 +471,7 @@ Computer vision (CV) is concerned with how the computer visually perceive the wo
           </div>
 
           <div class="testimonial-item">
-            <img src="C:\Users\User\Desktop\Folders on Desktop\daviddd.png" class="testimonial-img" alt="">
+            <img src="https://scontent.fabv2-1.fna.fbcdn.net/v/t1.0-9/97125085_2804665149632357_5199370366383816704_n.jpg?_nc_cat=101&_nc_sid=730e14&_nc_eui2=AeGCMUVnf5Q1Qcvun64n6OVmJ1PRGqXb45knU9EapdvjmWujlg5dgtECoQIoC5-OHX6GjCIjilWmkqsUrb7Eeeu5&_nc_oc=AQkJ7xKZ0PzUdgFYT619fP8r-UWR2LC9i3WwRELQwu1xutBKvVsfuCS-vfK_xXSC-sE&_nc_ht=scontent.fabv2-1.fna&oh=ed75cb34b87ac53831c52efd380fe2ff&oe=5EE2C634" class="testimonial-img" alt="">
             <h3>Alamu David</h3>
             <h4>Trainee (AeroSpace Engr.)</h4>
             <p>
@@ -532,7 +532,7 @@ Computer vision (CV) is concerned with how the computer visually perceive the wo
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
-              <div class="pic"><img src="C:\Users\User\Desktop\Folders on Desktop\seyio.png" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="https://scontent.fabv2-1.fna.fbcdn.net/v/t1.0-9/96820323_2804664769632395_5430282922206691328_o.jpg?_nc_cat=111&_nc_sid=730e14&_nc_eui2=AeF_a9CmGAIHbECM79TNPY2_QuP9msH4j5RC4_2awfiPlPGeceAUGdE63Mc7KMfVUCV2E0NsrQ0g0wIr1A_BE3hz&_nc_oc=AQnKf29OF5PVAUTADCK2Jz5inrKceCKI_TTqRPNEt6pTbRamlu9LqAtzqWZbOOdcClA&_nc_ht=scontent.fabv2-1.fna&oh=7f24add47a235a35ac6ea7aaabf2144b&oe=5EE53EC9" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Ogunbiyi Oluwaseyi</h4>
                 <span>Trainee</span>
