--- a/seyi.html
+++ b/seyi.html
@@ -20,9 +20,12 @@
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
+
   <!-- Favicons -->
-  <link href="C:\Users\User\Documents\Main Registration Form Kannu_files\Aileadlogo.png" rel="icon">
-  <link href="C:\Users\User\Documents\Main Registration Form Kannu_files\Aileadlogo.png" rel="AileadLogo">
+  <link href="https://scontent.fabv2-1.fna.fbcdn.net/v/t1.0-9/97136618_2804678399631032_937402519594729472_n.jpg?_nc_cat=109&_nc_sid=730e14&_nc_eui2=AeEneOJCKrRC1FiiN9M3ghoUuAN_oWIMYxG4A3-hYgxjETISzWieC480P7QJRSbD9vhOA8B8lU0B_3Ol8cea33OH&_nc_oc=AQn24NRgLs8YYFGtKlCTZm2QG4xBJNFyr6wCFm7qdQuTPC3KAsaffSieXvDiFirzVkU&_nc_ht=scontent.fabv2-1.fna&oh=d251d298103fa5f50579baeaf33e17ef&oe=5EE5E25C" rel="icon">
+  <link href="https://scontent.fabv2-1.fna.fbcdn.net/v/t1.0-9/97136618_2804678399631032_937402519594729472_n.jpg?_nc_cat=109&_nc_sid=730e14&_nc_eui2=AeEneOJCKrRC1FiiN9M3ghoUuAN_oWIMYxG4A3-hYgxjETISzWieC480P7QJRSbD9vhOA8B8lU0B_3Ol8cea33OH&_nc_oc=AQn24NRgLs8YYFGtKlCTZm2QG4xBJNFyr6wCFm7qdQuTPC3KAsaffSieXvDiFirzVkU&_nc_ht=scontent.fabv2-1.fna&oh=d251d298103fa5f50579baeaf33e17ef&oe=5EE5E25C" rel="https://scontent.fabv2-1.fna.fbcdn.net/v/t1.0-9/97136618_2804678399631032_937402519594729472_n.jpg?_nc_cat=109&_nc_sid=730e14&_nc_eui2=AeEneOJCKrRC1FiiN9M3ghoUuAN_oWIMYxG4A3-hYgxjETISzWieC480P7QJRSbD9vhOA8B8lU0B_3Ol8cea33OH&_nc_oc=AQn24NRgLs8YYFGtKlCTZm2QG4xBJNFyr6wCFm7qdQuTPC3KAsaffSieXvDiFirzVkU&_nc_ht=scontent.fabv2-1.fna&oh=d251d298103fa5f50579baeaf33e17ef&oe=5EE5E25C">
+
+
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -47,7 +50,7 @@
   <header id="header" class="fixed-top ">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html" class="logo"> <img src="C:\Users\User\Documents\Main Registration Form Kannu_files\Aileadlogo.png" alt="" class="img-fluid"> </a></h1>
+      <h1 class="logo"><a href="index.html" class="logo"> <img src="Aileadlogo.png" alt="" class="img-fluid"> </a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
